--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.medo.tweetspie.ui.main.MainActivity">
+    tools:context=".main.MainActivity">
 
 </android.support.constraint.ConstraintLayout>
