--- a/app/src/main/res/layout/layout_tweet.xml
+++ b/app/src/main/res/layout/layout_tweet.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/image_avatar"
@@ -11,14 +12,11 @@
         android:layout_height="48dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:adjustViewBounds="true"
         android:contentDescription="@null"
         android:cropToPadding="true"
         android:scaleType="centerCrop"
-        tools:src="@drawable/ic_at_black_24dp"/>
+        tools:src="@color/colorAccent"/>
 
     <TextView
         android:id="@+id/text_name"
@@ -26,7 +24,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_toEndOf="@+id/image_avatar"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         tools:text="Screen_Name"/>
@@ -38,7 +35,6 @@
         android:layout_alignParentTop="true"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
         android:layout_toEndOf="@+id/text_name"
         android:layout_toStartOf="@+id/text_date"
         android:ellipsize="end"
@@ -52,8 +48,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         tools:text="2d"/>
 
@@ -62,12 +56,39 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_name"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         android:layout_toEndOf="@+id/image_avatar"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textAppearance="@style/TextAppearance.AppCompat"
         tools:text="For some notifications (mentions or retweets), you can choose between receiving notifications Only from people I follow or From anyone."/>
+
+    <ToggleButton
+        android:id="@+id/toggle_retweets"
+        style="@style/CustomToggleButton"
+        android:layout_below="@+id/text_text"
+        android:layout_marginStart="8dp"
+        android:layout_toEndOf="@+id/image_avatar"
+        android:button="@drawable/selector_retweet"
+        tools:textOff="16"/>
+
+    <ToggleButton
+        android:id="@+id/toggle_favorites"
+        style="@style/CustomToggleButton"
+        android:layout_below="@+id/text_text"
+        android:layout_marginStart="8dp"
+        android:layout_toEndOf="@+id/toggle_retweets"
+        android:button="@drawable/selector_favorite"
+        tools:textOff="20"/>
+
+    <TextView
+        android:id="@+id/text_score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/text_text"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        tools:text="132"/>
 
 </RelativeLayout>
