--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="space_semi">4dp</dimen>
+    <dimen name="space_normal">8dp</dimen>
+    <dimen name="space_extra">12dp</dimen>
+    <dimen name="space_double">16dp</dimen>
 </resources>
