--- a/app/src/main/res/layout/layout_tweet.xml
+++ b/app/src/main/res/layout/layout_tweet.xml
@@ -5,6 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <ImageView
+        android:id="@+id/image_avatar"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="@dimen/space_normal"
+        android:layout_marginTop="@dimen/space_normal"
+        android:adjustViewBounds="true"
+        android:contentDescription="@null"
+        android:cropToPadding="true"
+        android:scaleType="centerCrop"
+        tools:src="@color/colorAccent"/>
+
     <TextView
         android:id="@+id/text_name"
         android:layout_width="wrap_content"
@@ -21,8 +35,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="4dp"
+        android:layout_marginEnd="@dimen/space_normal"
+        android:layout_marginStart="@dimen/space_semi"
         android:layout_marginTop="@dimen/space_normal"
         android:layout_toEndOf="@+id/text_name"
         android:layout_toStartOf="@+id/text_date"
@@ -43,41 +57,56 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         tools:text="2d"/>
 
-    <TextView
-        android:id="@+id/text_text"
+    <LinearLayout
+        android:id="@+id/layout_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/text_retweets"
         android:layout_below="@+id/text_name"
-        android:layout_marginBottom="4dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_toEndOf="@+id/image_avatar"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        tools:text="For some notifications (mentions or retweets), you can choose between receiving notifications Only from people I follow or From anyone."/>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/text_retweeted_by"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textStyle="italic"
+            tools:text="Retweeted by Username"/>
+
+        <TextView
+            android:id="@+id/text_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/space_semi"
+            android:paddingTop="@dimen/space_semi"
+            android:textAppearance="@style/TextAppearance.AppCompat"
+            tools:text="For some notifications (mentions or retweets), you can choose between receiving notifications Only from people I follow or From anyone."/>
+
+    </LinearLayout>
 
     <CheckedTextView
         android:id="@+id/text_retweets"
         style="@style/CustomCheckedTextView"
-        android:layout_below="@+id/text_text"
-        android:layout_marginStart="8dp"
+        android:layout_below="@+id/layout_text"
+        android:layout_marginEnd="@dimen/space_normal"
+        android:layout_marginStart="@dimen/space_normal"
         android:layout_toEndOf="@+id/image_avatar"
         android:drawableStart="@drawable/selector_retweet"
         android:paddingBottom="@dimen/space_normal"
-        android:paddingEnd="@dimen/space_normal"
-        android:paddingStart="@dimen/space_normal"
+        android:paddingTop="@dimen/space_semi"
         tools:text="16"/>
 
     <CheckedTextView
         android:id="@+id/text_favorites"
         style="@style/CustomCheckedTextView"
-        android:layout_below="@+id/text_text"
+        android:layout_below="@+id/layout_text"
         android:layout_marginStart="8dp"
         android:layout_toEndOf="@+id/text_retweets"
         android:drawableStart="@drawable/selector_favorite"
         android:paddingBottom="@dimen/space_normal"
-        android:paddingEnd="@dimen/space_normal"
-        android:paddingStart="@dimen/space_normal"
+        android:paddingTop="@dimen/space_semi"
         tools:text="20"/>
 
     <TextView
@@ -85,25 +114,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/text_text"
+        android:layout_below="@+id/layout_text"
         android:paddingBottom="@dimen/space_normal"
         android:paddingEnd="@dimen/space_normal"
         android:paddingStart="@dimen/space_normal"
+        android:paddingTop="@dimen/space_semi"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         tools:text="132"/>
-
-    <ImageView
-        android:id="@+id/image_avatar"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="@dimen/space_normal"
-        android:layout_marginTop="@dimen/space_normal"
-        android:adjustViewBounds="true"
-        android:contentDescription="@null"
-        android:cropToPadding="true"
-        android:scaleType="centerCrop"
-        tools:src="@color/colorAccent"/>
 
 </RelativeLayout>
