--- a/app/src/main/res/layout/layout_tweet.xml
+++ b/app/src/main/res/layout/layout_tweet.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/image_avatar"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="@dimen/size_avatar"
+        android:layout_height="@dimen/size_avatar"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="@dimen/space_normal"
         android:layout_marginTop="@dimen/space_normal"
-        android:adjustViewBounds="true"
         android:contentDescription="@null"
         android:cropToPadding="true"
-        android:scaleType="centerCrop"
         tools:src="@color/colorAccent"/>
 
     <TextView
@@ -63,6 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/text_retweets"
         android:layout_below="@+id/text_name"
+        android:layout_marginEnd="@dimen/space_normal"
         android:orientation="vertical">
 
         <TextView
@@ -73,7 +73,9 @@
             android:maxLines="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textStyle="italic"
-            tools:text="Retweeted by Username"/>
+            android:visibility="gone"
+            tools:text="Retweeted by Username"
+            tools:visibility="visible"/>
 
         <TextView
             android:id="@+id/text_text"
@@ -83,6 +85,38 @@
             android:paddingTop="@dimen/space_semi"
             android:textAppearance="@style/TextAppearance.AppCompat"
             tools:text="For some notifications (mentions or retweets), you can choose between receiving notifications Only from people I follow or From anyone."/>
+
+        <android.support.percent.PercentFrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/image_media"
+                android:adjustViewBounds="true"
+                android:contentDescription="@null"
+                android:visibility="gone"
+                app:layout_aspectRatio="178%"
+                app:layout_widthPercent="100%"
+                tools:layout_height="160dp"
+                tools:layout_width="match_parent"
+                tools:src="@color/colorAccent"
+                tools:visibility="visible"/>
+
+            <TextView
+                android:id="@+id/text_media_type"
+                android:layout_width="@dimen/size_avatar"
+                android:layout_height="@dimen/size_avatar"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center"
+                android:background="@drawable/circle_outline_white"
+                android:elevation="@dimen/space_semi"
+                android:gravity="center"
+                android:padding="@dimen/space_normal"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
+                tools:text="GIF"
+                tools:visibility="visible"/>
+
+        </android.support.percent.PercentFrameLayout>
 
     </LinearLayout>
 
@@ -120,6 +154,6 @@
         android:paddingStart="@dimen/space_normal"
         android:paddingTop="@dimen/space_semi"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        tools:text="132"/>
+        tools:text="420"/>
 
 </RelativeLayout>
