--- a/app/src/main/res/layout/layout_tweet.xml
+++ b/app/src/main/res/layout/layout_tweet.xml
@@ -102,6 +102,17 @@
                 tools:src="@color/colorAccent"
                 tools:visibility="visible"/>
 
+            <ImageView
+                android:id="@+id/image_transparency"
+                android:contentDescription="@null"
+                android:src="@color/colorSemiTransparent"
+                android:visibility="gone"
+                app:layout_aspectRatio="178%"
+                app:layout_widthPercent="100%"
+                tools:layout_height="160dp"
+                tools:layout_width="match_parent"
+                tools:visibility="visible"/>
+
             <TextView
                 android:id="@+id/text_media_type"
                 android:layout_width="@dimen/size_avatar"
