--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#ff4081</color>
     <color name="colorPlaceholder">#dfdfdf</color>
     <color name="colorError">#b22c5a</color>
+    <color name="colorSemiTransparent">#30000000</color>
 </resources>
