Improve tweet media viewing experience
This commit replaces the old fragment dialog for media viewing with
a new immersive activity that properly displays multiple photos, gif
or starts a new intent for viewing videos.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppThemeDark" parent="Theme.AppCompat.NoActionBar"/>
+
     <style name="CustomCheckedTextView">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
