--- a/app/src/main/res/layout/activity_viewer.xml
+++ b/app/src/main/res/layout/activity_viewer.xml
@@ -15,5 +15,6 @@
         android:id="@+id/indicator"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_gravity="bottom"/>
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="48dp"/>
 </FrameLayout>
