--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#ff4081</color>
+    <color name="colorPrimary">#00abeb</color>
+    <color name="colorPrimaryDark">#007EAE</color>
+    <color name="colorAccent">#f06a99</color>
     <color name="colorPlaceholder">#dfdfdf</color>
-    <color name="colorError">#b22c5a</color>
+    <color name="colorError">#ffcc6c</color>
     <color name="colorSemiTransparent">#30000000</color>
 </resources>
