--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    android:id="@+id/container_main"
+<merge
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".main.MainActivity">
 
     <ProgressBar
@@ -23,4 +20,4 @@
         android:clipToPadding="false"
         android:paddingTop="@dimen/space_semi"/>
 
-</FrameLayout>
+</merge>
