--- a/app/src/main/res/layout/activity_viewer.xml
+++ b/app/src/main/res/layout/activity_viewer.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<merge
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context=".main.viewer.ViewerActivity">
 
     <VideoView
@@ -23,4 +21,4 @@
         android:layout_height="48dp"
         android:layout_gravity="bottom"
         android:layout_marginBottom="48dp"/>
-</FrameLayout>
+</merge>
