--- a/app/src/main/res/layout/layout_tweet.xml
+++ b/app/src/main/res/layout/layout_tweet.xml
@@ -70,12 +70,26 @@
             android:id="@+id/text_retweeted_by"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_retweet_off"
             android:ellipsize="end"
             android:maxLines="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textStyle="italic"
             android:visibility="gone"
             tools:text="Retweeted by Username"
+            tools:visibility="visible"/>
+
+        <TextView
+            android:id="@+id/text_replying_to"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_reply"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textStyle="italic"
+            android:visibility="gone"
+            tools:text="Replying to Username"
             tools:visibility="visible"/>
 
         <TextView
