--- a/app/src/main/res/layout/fragment_tweets.xml
+++ b/app/src/main/res/layout/fragment_tweets.xml
@@ -8,6 +8,9 @@
         android:id="@+id/recycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:clipToPadding="false"
+        android:paddingTop="@dimen/space_8"
+        android:paddingBottom="@dimen/space_8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
